--- a/Agenda/.vscode/settings.json
+++ b/Agenda/.vscode/settings.json
@@ -10,6 +10,14 @@
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.media.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
         "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar"
+        "c:\\Program Files\\Java\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx.base.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx.controls.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx.fxml.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx.graphics.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx.media.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx.swing.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx.web.jar",
+        "c:\\Users\\eduri\\OneDrive\\Documentos\\Estudos\\Faculdade\\3º Semestre\\Desenvolvimento de Software\\Agenda-JavaFx\\javafx-sdk-18.0.1\\lib\\javafx-swt.jar"
     ]
 }
